<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oluwoleoyetoke.acceleratedvision.MainActivity">

    <TextView
        android:id="@+id/welcome_txt_view"
        android:layout_width="wrap_content"
        android:layout_height="89dp"
        android:layout_marginTop="244dp"
        android:fontFamily="@font/elsie_swash_caps"
        android:text="@string/welcome"
        android:textColor="@color/colorPrimary"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="60sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="onClickStartButton"
        android:text="@string/start_button"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_txt_view" />

    <TextView
        android:id="@+id/download_txt_view"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginBottom="52dp"
        android:onClick="onClickDownloadTrainedNet"
        android:text="@string/download"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
